--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -356,7 +356,9 @@ body {
 }
 
 /******************************Macs Card**************************/
-=======
+
+CoolDude69-body{
+
     width: 300px;
     height: 400px;
     background-color: #f5f6f7;
