--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -357,7 +357,7 @@ body {
 
 /******************************Macs Card**************************/
 
-CoolDude69-body{
+.CoolDude69{
 
     width: 300px;
     height: 400px;
@@ -561,3 +561,7 @@ CoolDude69-body{
   /**********************Dusty -- END ************************/
   /*************************************************************/
 
+.summary:hover{
+
+  cursor: pointer;
+}
