--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -320,7 +320,7 @@ body {
   border: none;
   box-shadow: -4px -2px 4px 0px #ffffff, 4px 2px 6px 0px #dfe4ea;
   border-radius: 5px;
-  cursor: pointer;
+  cursor: text;
   color: #616161;
   padding: 0.5rem 0.75rem;
   margin-top: 0rem;
