--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -690,3 +690,73 @@ body {
 }
 
 /***************************** Mingkay - End ********************************/
+
+ /*******************************************************/
+  /**********************NAPSER-start************************/
+  /*******************************************************/
+
+  .mthakur-card {
+   width: 300px;
+   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+   height: 450px; 
+    
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin: 20px;
+    padding: 20px;
+  }
+
+  .napser-image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+    width: 100%;
+  }
+
+  .napser-info {
+    display: none;
+  }
+
+  .mthakur-card .napser-image img {
+    position: relative;
+    top: 20px;
+    z-index: 5;
+    height: 250px;
+    width: 250px;
+    border-radius: 100%;
+    transition: transform 0.9s;
+    border: 5px dashed teal;
+  }
+
+  .mthakur-card:hover .napser-image img { 
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    border: none;
+  }
+
+  .mthakur-card:hover .napser-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 50%;
+    width: 100%;
+    margin-top: 30px;
+  }
+
+  .napser-info strong {
+    color: teal;
+  }
+
+  .napser-info p {
+    margin: 5px;
+  }
+  /*************************************************************/
+  /**********************NAPSER -- END ************************/
+  /*************************************************************/
