--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,6 +11,8 @@ body {
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  justify-content: center;
+  align-items: center;
 }
 
 .header-introduction {
@@ -114,7 +116,7 @@ body {
 }
 
 .hacktoberfest-wrapper {
-  width: 100%;
+  width: 90%;
   background: white;
 
   display: flex;
@@ -865,6 +867,7 @@ body {
   background-color: lightgray;
   border-radius: 16px;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.4);
+  margin: 20px;
 }
 .roshan1 {
   border-radius: 16px;
@@ -886,7 +889,6 @@ body {
     left : 50%;
     top : 50%;
     transform : translate(-50%, -50%); */
-  margin-top: 20px;
   width: 310px;
   height: 500px;
   background: lightgray;
@@ -902,6 +904,7 @@ body {
   border-radius: 12px;
   box-shadow: 0 2px 15px rgba(100, 220, 236, 0.555),
     0 8px 25px rgba(96, 235, 253, 0.3);
+  margin: 20px;
 }
 
 .myPetCard {
@@ -917,7 +920,7 @@ body {
 .myPetImg {
   width: 100%;
   height: 200px;
-  background: url(/assets/images/fluffy1.jpg);
+  /* background: url(/assets/images/fluffy1.jpg); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
