--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1160,3 +1160,50 @@ button.my-git:hover {
 /* Rocky end */
 /*************************************************************/
 /*************************************************************/
+
+/*************************************************************/
+/***************** Nikki Start *******************************/
+/*************************************************************/
+
+.nikki_container {
+  width: 300px;;
+  height: 200px;
+  perspective: 500px;
+}
+
+.nikki_card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+
+
+.nikki_card.nikki_is_flipped {
+  transform: rotateY(180deg);
+  
+}
+
+
+.nikki_front,
+.nikki_back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  
+}
+
+
+.nikki_back {
+  background-color:rgb(136, 34, 161);
+  color: rgba(247, 239, 239, 0.959);
+  font-family: Arial, Helvetica, sans-serif;
+  transform: rotateY(180deg);
+}
+
+/***************************************************************************/
+/********************* Nikki end *******************************************/
+/***************************************************************************/
