--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1207,3 +1207,156 @@ button.my-git:hover {
 /***************************************************************************/
 /********************* Nikki end *******************************************/
 /***************************************************************************/
+
+/*
+|----------------------------------------------------------------------------|
+|-------------------------------JAY STYLES-----------------------------------|
+|----------------------------------------------------------------------------|
+*/
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dog-card-main {
+  height: 100vh;
+}
+
+.dog-card-box {
+  width: 300px;
+  height: 400px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.288);
+  border-radius: 23px;
+  flex-direction: column;
+  color: white;
+  position: relative;
+  overflow: hidden;
+  background-color: #2c5364;
+}
+
+.dog-card-box img {
+  width: 95%;
+  height: 150px;
+  border-radius: 23px;
+}
+
+.dog_name {
+  margin-bottom: 2px;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.phrase {
+  color: rgba(255, 255, 255, 0.555);
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.attributes div {
+  display: inline-block;
+  color: rgb(155, 155, 155);
+  border: 1px solid rgb(155, 155, 155);
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-size: .9rem;
+  font-weight: bold;
+  margin: 4px 4px 4px 0;
+}
+
+.arr_container {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background: white;
+  bottom: 0;
+  right: 0;
+  border-radius: 23px 0 23px 0;
+  color: rgb(70, 70, 70);
+  font-size: 1.6rem;
+  cursor: pointer;
+  transition: all .8s;
+}
+
+.arr_container img {
+  width: 20px;
+  height: 20px;
+}
+
+.active_arr {
+  transform: translate(80%, 80%);
+}
+
+.left_container {
+  position: absolute;
+  background: #0f2027;
+  width: 100%;
+  height: 100%;
+  border-radius: 23px;
+  padding: 40px 0 0 20px;
+  transition: all .8s;
+}
+
+.off {
+  transform: translate(-103%, -72%) rotate(90deg);
+}
+
+.active {
+  transform: translate(0) rotate(0);
+}
+
+.left_container img {
+  width: 95%;
+  height: 40%;
+  border-radius: 10px;
+}
+
+.left_container p {
+  margin-bottom: 2px;
+  font-size: 0.65rem;
+  text-align: left;
+}
+
+.left_container .icons {
+  font-size: 1.6rem;
+  margin-top: 10px;
+}
+
+.left_container .icons img {
+  cursor: pointer;
+  width: 36px;
+  height: 36px;
+  margin-right: 10px;
+  transition: all .4s;
+}
+
+.left_container .icons img:hover {
+  color: #2c5364;
+}
+
+.cancel {
+  position: absolute;
+  width: 55px;
+  height: 65px;
+  background: white;
+  bottom: 0;
+  right: 0;
+  border-radius: 23px 0 23px 0;
+  color: rgb(70, 70, 70);
+  font-size: 1.6rem;
+  cursor: pointer;
+  transition: all .4s;
+}
+
+.cancel img {
+  width: 20px;
+  height: 20px;
+  margin-bottom: 15px;
+  margin-right: 10px;
+}
+/*
+|----------------------------------------------------------------------------|
+|------------------------------JAY STYLES END--------------------------------|
+|----------------------------------------------------------------------------|
+*/
