--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -282,10 +282,9 @@ body {
   padding: 1.5em;
   background: linear-gradient(
     hsl(0 0% 0% / 0),
-    hsl(20 0% 0% / 0.3) 20%, 
+    hsl(20 0% 0% / 0.3) 20%,
     hsl(0 0% 0% / 1)
   );
-
 }
 
 .oreo-title {
@@ -304,7 +303,7 @@ body {
   transition: transform 500ms ease;
 }
 
-.oreo-card:hover .oreo-title::after{
+.oreo-card:hover .oreo-title::after {
   transform: scale(1);
 }
 
@@ -319,16 +318,16 @@ body {
     transition: transform 500ms ease;
   }
 
-  .oreo-card:hover .oreo-content{
+  .oreo-card:hover .oreo-content {
     transform: translateY(0);
     transition-delay: 500ms;
   }
-  
+
   .oreo-content > *:not(.oreo-title) {
     opacity: 0;
     transition: opacity 500ms linear;
   }
-  
+
   .oreo-card:hover .oreo-content > *:not(.oreo-title) {
     opacity: 1;
     transition-delay: 1000ms;
@@ -1439,8 +1438,6 @@ button.my-git:hover {
 |----------------------------------------------------------------------------|
 */
 
-
-
 /* -----------------sumit Style start --------------------- */
 .Chitti-card {
   border-radius: 16px;
@@ -1450,8 +1447,7 @@ button.my-git:hover {
   max-width: 100%;
   min-height: 500px;
   box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
-    0px 5px 8px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 14px 0px rgba(0, 0, 0, 0.12);
+    0px 5px 8px 0px rgba(0, 0, 0, 0.14), 0px 1px 14px 0px rgba(0, 0, 0, 0.12);
   overflow: hidden;
   background-size: cover;
 }
@@ -1474,9 +1470,7 @@ button.my-git:hover {
   width: 100%;
   height: 500px;
   background-color: #fff;
-  transform: translateY(100%)
-    translateY(-88px)
-    translateZ(0);
+  transform: translateY(100%) translateY(-88px) translateZ(0);
   transition: transform 0.5s ease-out;
 }
 
@@ -1491,9 +1485,7 @@ button.my-git:hover {
   filter: blur(10px);
   background-size: cover;
   opacity: 0.25;
-  transform: translateY(-100%)
-    translateY(88px)
-    translateZ(0);
+  transform: translateY(-100%) translateY(88px) translateZ(0);
   transition: transform 0.5s ease-out;
 }
 
@@ -1517,10 +1509,7 @@ button.my-git:hover {
   line-height: 1.5;
 }
 
-
 /* -----------sumit style end ----------------------------- */
-
-
 
 /*
 |----------------------------------------------------------------------------|
@@ -1529,7 +1518,7 @@ button.my-git:hover {
 */
 
 .fixwad-wrapper {
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .fixwad-wrapper:hover {
@@ -1539,16 +1528,16 @@ button.my-git:hover {
 
 .fixwad-wrapper .devider {
   height: 1px;
-  background-color: #FFF0E3;
+  background-color: #fff0e3;
   margin-bottom: 12px;
 }
 
 .fixwad-card {
   width: 300px;
   min-height: 450px;
-  background: linear-gradient(156.04deg, #282634 0%, #1C1A27 100%);
+  background: linear-gradient(156.04deg, #282634 0%, #1c1a27 100%);
   border-radius: 14px;
-  border: 5px solid #F88E00;
+  border: 5px solid #f88e00;
   box-sizing: border-box;
   padding: 30px;
 }
@@ -1563,20 +1552,20 @@ button.my-git:hover {
   margin: 7px auto 24px auto;
   border-radius: 50%;
   overflow: hidden;
-  border: 3px solid #FAFAFA;
+  border: 3px solid #fafafa;
 }
 
 .fixwad-card-body .name {
   font-weight: 500;
   font-size: 18px;
   line-height: 21px;
-  color: #FFCC9D;
+  color: #ffcc9d;
 }
 
 .fixwad-card-body p {
   font-size: 14px;
   line-height: 20px;
-  color: #FAFAFA;
+  color: #fafafa;
   margin: 0;
   margin-bottom: 4px;
 }
@@ -1587,7 +1576,7 @@ button.my-git:hover {
   height: 35px;
   text-align: center;
   line-height: 35px;
-  background: linear-gradient(91.22deg, #FF8A48 0%, #FF7070 100%);
+  background: linear-gradient(91.22deg, #ff8a48 0%, #ff7070 100%);
   font-size: 14px;
   color: white;
   text-decoration: none;
@@ -1600,4 +1589,44 @@ button.my-git:hover {
 |----------------------------------------------------------------------------|
 */
 
+/* *************** DINESH STYLES START ************** */
+.pet-container {
+  width: 100%;
+  max-width: 300px;
+}
 
+.pet-card {
+  box-shadow: 0 0 20px 0 rgb(224, 220, 220);
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.pet-image img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.pet-content {
+  padding: 1em;
+}
+
+.pet-author-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pet-author-info a {
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pet-author-info img {
+  width: 30%;
+  display: block;
+  object-fit: cover;
+}
+/* *************** DINESH STYLES END ************** */
