--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1360,3 +1360,113 @@ button.my-git:hover {
 |------------------------------JAY STYLES END--------------------------------|
 |----------------------------------------------------------------------------|
 */
+
+/*  JAEBIRDS STYLE  */
+
+.jaebirds-card {
+  width: 350px;
+  color: #333;
+  border-radius: 10px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  overflow: hidden;
+  -webkit-font-smoothing: antialiased;
+}
+.jaebirds-img {
+  position: relative;
+  width: 100%;
+  height: 233px;
+  pointer-events: none;
+}
+.jaebirds-img img {
+  position: absolute;
+  width: 100%;
+}
+.jaebirds-img h3 {
+  position: absolute;
+  padding: 10px 14px;
+  margin: 0;
+  color: #f0eeef;
+  bottom: 0;
+  font-size: 1.4rem;
+  font-style: italic;
+  text-shadow: 0px 0px 6px #593b22;
+}
+
+.jaebirds-secret {
+  position: absolute;
+  color: #fff;
+  font-size: 0.8rem;
+  right: 50px;
+  bottom: 50px;
+  transform: rotate(-35deg);
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+.jaebirds-card:hover .jaebirds-secret {opacity: 1;}
+
+.jaebirds-card ul {list-style-type: circle;}
+
+.jaebirds-card p {
+  padding: 5px 20px;
+  margin-bottom: 25px;
+}
+
+.jaebirds-card a {
+  font-weight: 500;
+  color: #333;
+  outline: none;
+  position: relative;
+  text-decoration: none;
+  white-space: nowrap;
+  box-sizing: border-box;
+}
+.jaebirds-card a:before,
+.jaebirds-card a:after {
+  content: '';
+  position: absolute;
+  height: 5px;
+  width: 100%;
+  background: #bf853f;
+  top: 100%;
+  left: 0;
+  pointer-events: none;
+  box-sizing: border-box;
+  opacity: 0;
+}
+.jaebirds-card a:after {
+  height: 2px;
+  transition: opacity 0.3s;
+  transition-delay: 0s;
+}
+.jaebirds-card a:hover:before {
+  opacity: 1;
+  animation: lineUp 0.3s ease forwards;
+}
+.jaebirds-card a:hover:after {
+  opacity: 1;
+  transition-delay: 0.3s;
+}
+
+@keyframes lineUp {
+  0% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 0.045, 1);
+  }
+
+  50% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 1, 1);
+  }
+
+  51% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 1, 1);
+  }
+
+  100% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 0.045, 1);
+  }
+}
+
+/*  JAEBIRDS STYLE END */
