--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -173,6 +173,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #143b1bc7;
   width: 100%;
   max-width: 300px;
   height: 500px;
@@ -213,11 +214,14 @@ body {
   align-items: center;
   padding: 1rem;
 }
-
+.card-cho__title {
+  color: wheat;
+}
 .card-cho__text {
   width: 100%;
   max-width: 250px;
   text-align: center;
+  color: wheat;
 }
 .card-cho__text-2 {
   display: none;
@@ -232,6 +236,7 @@ body {
 }
 .btn {
   text-align: center;
+  background-color: wheat;
   color: black;
   width: 80px;
   padding: 0.5rem;
@@ -247,7 +252,7 @@ body {
 .btn:hover {
   transform: scaleX(1.1);
   background-color: green;
-  color: honeydew;
+  color: wheat;
   box-shadow: 0px 4px 4px rgba(16, 233, 124, 0.2);
   border: 1px solid rgba(22, 219, 121, 0.2);
 }
