--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1211,7 +1211,7 @@ body {
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
 }
 
-/* 
+/*
 -------------------------------------------------------------
 ---------------------FLUFFY  END----------------------
 -------------------------------------------------------------
@@ -1924,3 +1924,44 @@ button.my-git:hover {
 }
 
 /* lily's style end */
+
+/*Emma's style card */
+.emma-flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 400px;
+  perspective: 1000px;
+}
+
+.emma-flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.emma-flip-card:hover .emma-flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.emma-flip-card-front, .emma-flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.emma-flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.emma-flip-card-back {
+  background-color: #664E88;
+  color: white;
+  transform: rotateY(180deg);
+}
