--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1891,3 +1891,77 @@ button.my-git:hover {
     color: black;
 }
 /* Jimmy's style */
+
+/*******************************************************/
+
+
+/**********************Thomas/Dermott************************/
+
+
+/*******************************************************/
+
+.thomas-card {
+    height: 450px;
+    width: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    padding: 20px;
+}
+
+.thomas-card:hover {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+}
+
+.dermott-image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+    width: 100%;
+}
+
+.dermott-image img {
+    top: 20px;
+    z-index: 5;
+    height: 250px;
+    width: 250px;
+    border-radius: 100%;
+    border: 2px solid #0646d1;
+}
+
+.thomas-info strong {
+    color: #0646d1;
+}
+
+.thomas-info p {
+    margin: 5px;
+}
+
+@keyframes shake {
+	0% { transform: translate(1px, 1px) rotate(0deg); }
+	10% { transform: translate(-1px, -2px) rotate(-1deg); }
+	20% { transform: translate(-3px, 0px) rotate(1deg); }
+	30% { transform: translate(3px, 2px) rotate(0deg); }
+	40% { transform: translate(1px, -1px) rotate(1deg); }
+	50% { transform: translate(-1px, 2px) rotate(-1deg); }
+	60% { transform: translate(-3px, 1px) rotate(0deg); }
+	70% { transform: translate(3px, 1px) rotate(-1deg); }
+	80% { transform: translate(-1px, -1px) rotate(1deg); }
+	90% { transform: translate(1px, 2px) rotate(0deg); }
+	100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+
+/*************************************************************/
+
+
+/**********************Thomas/Dermott -- END ************************/
+
+
+/*************************************************************/
