--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1211,7 +1211,7 @@ body {
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
 }
 
-/* 
+/*
 -------------------------------------------------------------
 ---------------------FLUFFY  END----------------------
 -------------------------------------------------------------
@@ -1999,3 +1999,89 @@ button.my-git:hover {
 
 
 /*************************************************************/
+
+/*Emma's style*/
+
+  .emma-card{
+    position: relative;
+    width: 300px;
+    height: 400px;
+    background: #A2416B;
+    margin: 0 auto;
+    border-radius: 4px;
+    box-shadow:0 2px 10px rgba(0,0,0,.2);
+  }
+  .emma-card:before,
+  .emma-card:after
+  {
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    background: #fff;
+    transition: 0.5s;
+    z-index:-1;
+  }
+  .emma-card:hover:before{
+  transform: rotate(20deg);
+  box-shadow: 0 2px 20px rgba(0,0,0,.2);
+  }
+  .emma-card:hover:after{
+  transform: rotate(10deg);
+  box-shadow: 0 2px 20px rgba(0,0,0,.2);
+  }
+  .emma-card .emma-imgBx{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  bottom: 10px;
+  right: 10px;
+  background: #222;
+  transition: 0.5s;
+  z-index: 1;
+  }
+
+  .emma-card:hover .emma-imgBx
+  {
+    bottom: 80px;
+  }
+
+  .emma-card .emma-imgBx img{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+  }
+
+  .emma-card .emma-details{
+      position: absolute;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      height: 60px;
+      text-align: center;
+  }
+
+  .emma-card .emma-details h2{
+   margin: 0;
+   padding: 0;
+   font-weight: 600;
+   font-size: 20px;
+   color: #FEF1E6;
+   text-transform: uppercase;
+  }
+
+  .emma-card .emma-details h2 span{
+  font-weight: 500;
+  font-size: 16px;
+  color: #FEF1E6;
+  display: block;
+  margin-top: 5px;
+   }
+
+  /*Emma's style ends*/
