--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1041,7 +1041,8 @@ body {
 /***************************** Mingkay - Start ********************************/
 
 .card {
-  height: auto;
+  height: 550px;
+  width: 300px;
 }
 
 #title {
@@ -1052,12 +1053,12 @@ body {
 }
 
 .image-mingkay {
-  padding: 30px;
+  padding: 25px;
 }
 
 .mingkay-pic {
-  width: 100%;
-  height: 100%;
+  width: 240px;
+  height: 200px;
   border: 3px solid darkslategray;
   object-fit: cover;
 }
@@ -1807,8 +1808,7 @@ button.my-git:hover {
 */
 
 /*=== TIGGER STYLE START ===*/
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
 
 .cat-container {
   display: flex;
@@ -1854,7 +1854,7 @@ button.my-git:hover {
 
 .info {
   display: flex;
-  font-family: "Red Hat Display", sans-serif;
+  font-family: 'Red Hat Display', sans-serif;
   color: hsl(224, 23%, 55%);
   text-align: left;
   margin-top: 1em;
@@ -1886,7 +1886,7 @@ button.my-git:hover {
 /* Jimmy's style */
 
 /* lily's style start */
-.main_lily_card{
+.main_lily_card {
   height: 500px;
   width: 400px;
   position: relative;
@@ -1894,11 +1894,11 @@ button.my-git:hover {
   overflow: hidden;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.main_lily_card img{
+.main_lily_card img {
   width: 100%;
   height: 100%;
 }
-.lily_info{
+.lily_info {
   position: absolute;
   padding: 5%;
   bottom: -100%;
@@ -1906,21 +1906,22 @@ button.my-git:hover {
   height: 50%;
   z-index: 2;
   transition: 1.2s;
-  background-color: rgb(255, 255, 255,0.3);
+  background-color: rgb(255, 255, 255, 0.3);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   font-size: 1.5rem;
-  font-family: 'Times New Roman','sans-serif';
-  color:#1b1a1b;
+  font-family: 'Times New Roman', 'sans-serif';
+  color: #1b1a1b;
 }
 .main_lily_card:hover .lily_info {
   transition: 1.2s;
   bottom: 0;
   cursor: pointer;
 }
-.main_lily_card:hover{
+.main_lily_card:hover {
   transition-timing-function: ease;
-  box-shadow: 0 10px 12px 0 rgba(0, 0, 0, 0.2), 0 12px 40px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 10px 12px 0 rgba(0, 0, 0, 0.2),
+    0 12px 40px 0 rgba(0, 0, 0, 0.19);
 }
 
 /* lily's style end */
@@ -1928,112 +1929,128 @@ button.my-git:hover {
 
 /*******************************************************/
 
-
 /**********************Thomas/Dermott************************/
-
 
 /*******************************************************/
 
 .thomas-card {
-    height: 450px;
-    width: 300px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-    padding: 20px;
+  height: 450px;
+  width: 300px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  padding: 20px;
 }
 
 .thomas-card:hover {
-    animation: shake 0.5s;
-    animation-iteration-count: infinite;
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
 }
 
 .dermott-image {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 50%;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+  width: 100%;
 }
 
 .dermott-image img {
-    top: 20px;
-    z-index: 5;
-    height: 250px;
-    width: 250px;
-    border-radius: 100%;
-    border: 2px solid #0646d1;
+  top: 20px;
+  z-index: 5;
+  height: 250px;
+  width: 250px;
+  border-radius: 100%;
+  border: 2px solid #0646d1;
 }
 
 .thomas-info strong {
-    color: #0646d1;
+  color: #0646d1;
 }
 
 .thomas-info p {
-    margin: 5px;
+  margin: 5px;
 }
 
 @keyframes shake {
-	0% { transform: translate(1px, 1px) rotate(0deg); }
-	10% { transform: translate(-1px, -2px) rotate(-1deg); }
-	20% { transform: translate(-3px, 0px) rotate(1deg); }
-	30% { transform: translate(3px, 2px) rotate(0deg); }
-	40% { transform: translate(1px, -1px) rotate(1deg); }
-	50% { transform: translate(-1px, 2px) rotate(-1deg); }
-	60% { transform: translate(-3px, 1px) rotate(0deg); }
-	70% { transform: translate(3px, 1px) rotate(-1deg); }
-	80% { transform: translate(-1px, -1px) rotate(1deg); }
-	90% { transform: translate(1px, 2px) rotate(0deg); }
-	100% { transform: translate(1px, -2px) rotate(-1deg); }
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
-
 
 /*************************************************************/
 
-
 /**********************Thomas/Dermott -- END ************************/
-
 
 /*************************************************************/
 
 /*Emma's style*/
 
-  .emma-card{
-    position: relative;
-    width: 300px;
-    height: 400px;
-    background: #A2416B;
-    margin: 0 auto;
-    border-radius: 4px;
-    box-shadow:0 2px 10px rgba(0,0,0,.2);
-  }
-  .emma-card:before,
-  .emma-card:after
-  {
-    content:"";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 4px;
-    background: #fff;
-    transition: 0.5s;
-    z-index:-1;
-  }
-  .emma-card:hover:before{
+.emma-card {
+  position: relative;
+  width: 300px;
+  height: 400px;
+  background: #a2416b;
+  margin: 0 auto;
+  border-radius: 4px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+.emma-card:before,
+.emma-card:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  background: #fff;
+  transition: 0.5s;
+  z-index: -1;
+}
+.emma-card:hover:before {
   transform: rotate(20deg);
-  box-shadow: 0 2px 20px rgba(0,0,0,.2);
-  }
-  .emma-card:hover:after{
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+.emma-card:hover:after {
   transform: rotate(10deg);
-  box-shadow: 0 2px 20px rgba(0,0,0,.2);
-  }
-  .emma-card .emma-imgBx{
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+.emma-card .emma-imgBx {
   position: absolute;
   top: 10px;
   left: 10px;
@@ -2042,46 +2059,45 @@ button.my-git:hover {
   background: #222;
   transition: 0.5s;
   z-index: 1;
-  }
+}
 
-  .emma-card:hover .emma-imgBx
-  {
-    bottom: 80px;
-  }
+.emma-card:hover .emma-imgBx {
+  bottom: 80px;
+}
 
-  .emma-card .emma-imgBx img{
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-  }
+.emma-card .emma-imgBx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-  .emma-card .emma-details{
-      position: absolute;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;
-      height: 60px;
-      text-align: center;
-  }
+.emma-card .emma-details {
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  height: 60px;
+  text-align: center;
+}
 
-  .emma-card .emma-details h2{
-   margin: 0;
-   padding: 0;
-   font-weight: 600;
-   font-size: 20px;
-   color: #FEF1E6;
-   text-transform: uppercase;
-  }
+.emma-card .emma-details h2 {
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  font-size: 20px;
+  color: #fef1e6;
+  text-transform: uppercase;
+}
 
-  .emma-card .emma-details h2 span{
+.emma-card .emma-details h2 span {
   font-weight: 500;
   font-size: 16px;
-  color: #FEF1E6;
+  color: #fef1e6;
   display: block;
   margin-top: 5px;
-   }
+}
 
-  /*Emma's style ends*/
+/*Emma's style ends*/
